--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,8 @@
-util-linux-ng 2.14
+util-linux-ng 2.15-rc1: Mar 18 2009
+* see docs/v2.15-ReleaseNotes or complete changelog at
+  ftp://ftp.kernel.org/pub/linux/utils/util-linux-ng/v2.15/v2.15-rc1-ChangeLog
+
+util-linux-ng 2.14: Jun 9 2008
 * see docs/v2.14-ReleaseNotes or complete changelog at
   ftp://ftp.kernel.org/pub/linux/utils/util-linux-ng/v2.14/v2.14-ChangeLog
 
