mount: Add strictatime support
2.6.30 adds (patch d0adde574b8487ef30f69e2d08bba769e4be513f) support for a
strictatime mount parameter, used to request strict atime update semantics. The
following patch adds support for it to mount.

Signed-off-by: Matthew Garrett <mjg@redhat.com>

--- a/mount/mount.8
+++ b/mount/mount.8
@@ -807,6 +807,13 @@ Do not use
 feature (e.g, for systems where the feature is enabled by default, for
 more details see mount options in /proc/mounts).
 .TP
+.B strictatime
+Update inode access times whenever a file is accessed. Disables noatime and
+.B relatime.
+.TP
+.B nostrictatime
+Use the kernel's default behaviour for inode access time updates.
+.TP
 .B suid
 Allow set-user-identifier or set-group-identifier bits to take
 effect.
