--- a/libs/blkid/TODO
+++ b/libs/blkid/TODO
@@ -39,3 +39,6 @@
 
  - use fstatat() in blkid__scan_dir()
 
+ - add evaluate.c: blkid_evaluate_spec_to_buffer() (and add lib/canonicalize.c:
+   canonicalize_path_to_buffer())
+
