cfdisk: fix "cannot seek on disk drive" bug
Addresses-Debian-Bug: #511161
Signed-off-by: Karel Zak <kzak@redhat.com>

--- a/TODO
+++ b/TODO
@@ -1,3 +1,5 @@
+ * fdisk/* -- use off_t instead "long long"
+
  * mkswap: use /proc/sys/kernel/random/uuid as a fallback solution for builds 
    without libuuid
 
