--- a/shlibs/uuid/man/uuid_copy.3
+++ b/shlibs/uuid/man/uuid_copy.3
@@ -29,7 +29,7 @@
 .\" %End-Header%
 .\"
 .\" Created  Wed Mar 10 17:42:12 1999, Andreas Dilger
-.TH UUID_COPY 3 "@E2FSPROGS_MONTH@ @E2FSPROGS_YEAR@" "E2fsprogs version @E2FSPROGS_VERSION@"
+.TH UUID_COPY 3 "May 2009" "util-linux-ng" "Libuuid API"
 .SH NAME
 uuid_copy \- copy a UUID value
 .SH SYNOPSIS
@@ -49,8 +49,9 @@ The copied UUID is returned in the location pointed to by
 .SH AUTHOR
 Theodore Y. Ts'o
 .SH AVAILABILITY
-.UR http://e2fsprogs.sourceforge.net/
-http://e2fsprogs.sourceforge.net/
+.B libuuid
+is part of the util-linux-ng package since version 2.15.1 and is available from
+ftp://ftp.kernel.org/pub/linux/utils/util-linux-ng/.
 .UE
 .SH "SEE ALSO"
 .BR uuid (3),
