--- a/shlibs/uuid/man/uuid_compare.3
+++ b/shlibs/uuid/man/uuid_compare.3
@@ -29,7 +29,7 @@
 .\" %End-Header%
 .\"
 .\" Created  Wed Mar 10 17:42:12 1999, Andreas Dilger
-.TH UUID_COMPARE 3 "@E2FSPROGS_MONTH@ @E2FSPROGS_YEAR@" "E2fsprogs version @E2FSPROGS_VERSION@"
+.TH UUID_COMPARE 3 "May 2009" "util-linux-ng" "Libuuid API"
 .SH NAME
 uuid_compare \- compare whether two UUIDs are the same
 .SH SYNOPSIS
@@ -53,8 +53,9 @@ greater than
 .SH AUTHOR
 Theodore Y. Ts'o
 .SH AVAILABILITY
-.UR http://e2fsprogs.sourceforge.net/
-http://e2fsprogs.sourceforge.net/
+.B libuuid
+is part of the util-linux-ng package since version 2.15.1 and is available from
+ftp://ftp.kernel.org/pub/linux/utils/util-linux-ng/.
 .UE
 .SH "SEE ALSO"
 .BR uuid (3),
