docs: update AUTHORS file
Signed-off-by: Karel Zak <kzak@redhat.com>

--- a/AUTHORS
+++ b/AUTHORS
@@ -49,6 +49,7 @@ CONTRIBUTORS:
       Bernhard Walle <bwalle@suse.de>
       Cai Qian <qcai@redhat.com>
       Christophe Blaess <Christophe@Blaess.fr>
+      Chris Webb <chris@arachsys.com>
       Claus Hindsgaul <claus_h@image.dk>
       Cliff Wickman <cpw@sgi.com>
       Clytie Siddall <clytie@riverland.net.au>
@@ -143,6 +144,7 @@ CONTRIBUTORS:
       Sven Jost <sven.jost@googlemail.com>
       Theodore Ts'o <tytso@mit.edu>
       Tilman Schmidt <tilman@imap.cc>
+      Tom Prince <tom.prince@ualberta.net>
       Valerie Henson <val_henson@linux.intel.com>
       Vincent Deffontaines <vincent@gryzor.com>
       Volker Schatz <oss@volkerschatz.com>
