po: fix typo in French translation
Addresses-Mandriva-Bug: #42783
Signed-off-by: Olivier Blin <blino@mandriva.com>
Signed-off-by: Karel Zak <kzak@redhat.com>

--- a/po/fr.po
+++ b/po/fr.po
@@ -8876,7 +8876,7 @@ msgstr "       Je vais essayer le type %s\n"
 #: mount/mount.c:905
 #, c-format
 msgid "%s looks like swapspace - not mounted"
-msgstr "%s ressemble à un esapce de swap - n'a pas été monté"
+msgstr "%s ressemble à un espace de swap - n'a pas été monté"
 
 #: mount/mount.c:996
 msgid "mount failed"
