losetup: suggest to use modprobe rather than insmod in losetup.8
Addresses-Debian-Bug: #334796
Signed-off-by: Karel Zak <kzak@redhat.com>

--- a/mount/losetup.8
+++ b/mount/losetup.8
@@ -138,12 +138,12 @@ from determining the status of the device.
 If you are using the loadable module you must have the module loaded
 first with the command
 .IP
-# insmod loop.o
+# modprobe loop
 .LP
 Maybe also encryption modules are needed.
 .IP
-# insmod des.o
-# insmod cryptoloop.o
+# modprobe des
+# modprobe cryptoloop
 .LP
 The following commands can be used as an example of using the loop device.
 .nf
