--- a/mount/mount.8
+++ b/mount/mount.8
@@ -2395,16 +2395,16 @@ If no explicit loop device is mentioned
 (but just an option `\fB\-o loop\fP' is given), then
 .B mount
 will try to find some unused loop device and use that.
-If you are not so unwise as to make
-.I /etc/mtab
-a symbolic link to
-.I /proc/mounts
+
+Since Linux 2.6.25 is supported auto-destruction of loop devices and 
 then any loop device allocated by
 .B mount
 will be freed by
-.BR umount .
-You can also free a loop device by hand, using `losetup -d', see
-.BR losetup (8).
+.B umount
+independently on
+.I /etc/mtab .
+
+You can also free a loop device by hand, using `losetup -d' or `umount -d`.
 
 .SH RETURN CODES
 .B mount
