--- a/misc-utils/uuidd.8
+++ b/misc-utils/uuidd.8
@@ -64,11 +64,11 @@ UUID's.
 .TP
 .BI \-p  " pidfile"
 Specify the pathname where the pid file should be written.  By default,
-the pid file is written to /var/lib/libuuid/uuidd.pid.
+the pid file is written to /var/run/uuidd/uuidd.pid.
 .TP
 .BI \-s " socketpath"
 Specify the pathname used for the unix-domain socket used by uuidd.  By
-default, the pathname used is /var/lib/libuuid/request.  This is primarily
+default, the pathname used is /var/run/uuidd/request.  This is primarily
 for debugging purposes, since the pathname is hard-coded in the libuuid
 library.
 .TP
