docs: update AUTHORS file
Signed-off-by: Karel Zak <kzak@redhat.com>

--- a/AUTHORS
+++ b/AUTHORS
@@ -82,6 +82,7 @@ CONTRIBUTORS:
       Jakob Unterwurzacher <jakobunt@gmail.com>
       James Youngman <jay@gnu.org>
       Jason Vas Dias <jvdias@redhat.com>
+      Jeff Mahoney <jeffm@suse.com>
       Jim Meyering <meyering@redhat.com>
       John Keeping <john.keeping@lineone.net>
       Josep Puigdemont <josep.puigdemont@gmail.com>
