docs: update AUTHORS file
Signed-off-by: Karel Zak <kzak@redhat.com>

--- a/AUTHORS
+++ b/AUTHORS
@@ -60,6 +60,7 @@ CONTRIBUTORS:
       Cliff Wickman <cpw@sgi.com>
       Clytie Siddall <clytie@riverland.net.au>
       Daisuke Yamashita <yamad@mb.infoweb.ne.jp>
+      Daniel Drake <dsd@laptop.org>
       Daniel Nylander <po@danielnylander.se>
       David Brownell <david-b@pacbell.net>
       David Miller <davem@davemloft.net>
@@ -137,6 +138,7 @@ CONTRIBUTORS:
       Ram Pai <linuxram@us.ibm.com>
       Randy Dunlap <randy.dunlap@oracle.com>
       Ray Wang <wanglei1123@gmail.com>
+      Robert Förster <Dessa@gmake.de>
       Robert Millan <rmh@aybabtu.com>
       Rodrigo Stulzer Lopes <rodrigo@conectiva.com.br>
       Roy Peled <the.roy.peled@gmail.com>
@@ -156,7 +158,7 @@ CONTRIBUTORS:
       Theodore Ts'o <tytso@mit.edu>
       Tilman Schmidt <tilman@imap.cc>
       Tom Prince <tom.prince@ualberta.net>
-      Valerie Henson <val_henson@linux.intel.com>
+      Valerie Aurora <vaurora@redhat.com>
       Vincent Deffontaines <vincent@gryzor.com>
       Volker Schatz <oss@volkerschatz.com>
       Yu Zhiguo <yuzg@cn.fujitsu.com>
