--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,7 @@
+util-linux-ng 2.16: Jul  2009
+* see docs/v2.16-ReleaseNotes or complete changelog at
+  ftp://ftp.kernel.org/pub/linux/utils/util-linux-ng/v2.16/v2.16-ChangeLog
+
 util-linux-ng 2.16-rc2: Jul 2 2009
 * see docs/v2.16-ReleaseNotes or complete changelog at
   ftp://ftp.kernel.org/pub/linux/utils/util-linux-ng/v2.16/v2.16-rc2-ChangeLog
