--- a/fdisk/cfdisk.8
+++ b/fdisk/cfdisk.8
@@ -15,8 +15,17 @@
 .SH NAME
 cfdisk \- Curses based disk partition table manipulator for Linux
 .SH SYNOPSIS
-.BI "cfdisk [ \-agvz ] [ \-c " cylinders " ] [ \-h " heads " ]"
-.BI "[ \-s " sectors-per-track " ] [ -P " opt " ] [ " device " ]"
+.B cfdisk
+.RB [ \-agvz ]
+.RB [ \-c
+.IR cylinders ]
+.RB [ \-h
+.IR heads ]
+.RB [ \-s
+.IR sectors-per-track ]
+.RB [ \-P
+.IR opt ]
+.RI [ device ]
 .SH DESCRIPTION
 .B cfdisk
 is a curses based program for partitioning any hard disk drive.
